2003-02-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/libc-lock.h (__libc_once): In case no
	thread library is available, use correct value to mark initialized
	once variable.

2003-02-03  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c (allocate_stack): Use __getpagesize instead of
	__sysconf to determine pagesize.

	* pthread_create.c: Include <atomic.h>.
	* allocatestack.c (allocate_stack): Implement coloring of the
	allocated stack memory.  Rename pagesize to pagesize_m1.  It's the
	size minus one.  Adjust users.
	* sysdeps/i386/i686/Makefile: New file.

2003-02-02  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c: Improve comment throughout the file.

	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S
	(__lll_lock_wait): Add branch prediction.
	* sysdeps/unix/sysv/linux/i386/i486/libc-lowlevellock.S
	(__lll_lock_wait): Likewise.
	(lll_unlock_wake_cb): Removed.

2003-01-31  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/posix_opt.h: Remove
	_POSIX_THREAD_PRIORITY_SCHEDULING.

2003-01-30  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/pthread-functions.h (struct pthread_functions):
	Fix return type of ptr___pthread_getspecific.

2003-01-29  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-umask1.
	(tst-umask1-ARGS): Define.
	* tst-umask1.c: New file.

2003-01-28  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (libpthread-routines): Remove lowlevelrwlock.  Add
	pthread_rwlock_rdlock, pthread_rwlock_timedrdlock,
	pthread_rwlock_wrlock, pthread_rwlock_timedwrlock, and
	pthread_rwlock_unlock.
	* sysdeps/unix/sysv/linux/i386/i486/lowlevelrwlock.S: Removed
	* sysdeps/unix/sysv/linux/i386/i586/lowlevelrwlock.S: Removed
	* sysdeps/unix/sysv/linux/i386/i686/lowlevelrwlock.S: Removed
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_rdlock.S: New file.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_rwlock_timedrdlock.S:
	New file.