@@ -1,5 +1,7 @@
 2003-02-04  Ulrich Drepper  <drepper@redhat.com>
 
+	* atomic.h: Add missing atomic_ prefixes.
+
 	* sysdeps/pthread/bits/libc-lock.h (__libc_once): In case no
 	thread library is available, use correct value to mark initialized
 	once variable.
